# ant-mania

./: .env  Cargo.toml  README.md
src/: benchmark.rs  lib.rs  main.rs  map_generator.rs
